force-app/main/default/objects/Visit_Product_Message__c/Visit_Product_Message__c.object-meta.xml
<CustomObject>
    <label>Visit Product Message</label>
    <nameField>
        <displayFormat>VPM-{00000}</displayFormat>
        <label>Visit Product Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Product Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>