force-app/main/default/objects/Visit_Product_Message__c/fields/Visit_Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Visit_Product_Detail__c</fullName>
    <label>Visit Product Detail</label>
    <referenceTo>Visit_Product_Detail__c</referenceTo>
    <relationshipLabel>Visit Product Messages</relationshipLabel>
    <relationshipName>Visit_Product_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>